'Fixes-for-customer-login-page-input-field' :: On customer login page input field are short width on tablet view

--- a/app/design/frontend/Magento/luma/Magento_Customer/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_Customer/web/css/source/_module.less
@@ -375,7 +375,7 @@
         .fieldset {
             > .field {
                 > .control {
-                    width: 55%;
+                    width: 80%;
                 }
             }
         }
